--- a/project9_cohort4-master/project9_cohort4.Server/project9_cohort4.Server.csproj
+++ b/project9_cohort4-master/project9_cohort4.Server/project9_cohort4.Server.csproj
@@ -36,7 +36,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Animal_Images\" />
+    <Folder Include="wwwroot\Animal_Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Animal_Images\buddy1.jpg" />
+    <None Include="wwwroot\Animal_Images\buddy2.jpg" />
+    <None Include="wwwroot\Animal_Images\buddy3.jpg" />
   </ItemGroup>
 
 </Project>
