--- a/project9_cohort4-master/package.json
+++ b/project9_cohort4-master/package.json
@@ -3,5 +3,8 @@
     "@angular/localize": "^18.2.9",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "sweetalert2": "^11.14.4"
+  },
+  "devDependencies": {
+    "@angular/cli": "^18.2.10"
   }
 }
