--- a/project9_cohort4-master/package.json
+++ b/project9_cohort4-master/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@angular/localize": "^18.2.9",
+    "@angular/router": "^18.2.9",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "sweetalert2": "^11.14.4"
   },
